<resources>
    <string name="app_name">Owl Credit Bank</string>
    <string name="welcome">Добро пожаловать  в Owl Credit Bank </string>
    <string name="exit_button">Выход</string>
    <string name="login_button">Войти</string>
    <string name="registration_button">Зарегистрироваться</string>
    <string name="login_text">Для входа в личный кабинет введите логин и пароль</string>
    <string name="login">Логин</string>
    <string name="login_password">Пароль</string>
    <string name="registration_text">Для регистрации в приложении введите логин и пароль</string>
    <string name="registration_info">Я новый пользователь! Зарегистрироваться</string>
    <string name="congratulations_info">Поздравляем! Ваш аккаунт создан!</string>
    <string name="exit_congratulation">Выйти в меню логина</string>
    <string name="approved_loans">Одобренные кредиты</string>
    <string name="registered_loans">Имеющиеся кредиты</string>
    <string name="rejected_loans">Отклоненные кредиты</string>
    <string name="listing_loans">Список кредитов</string>
    <string name="back_button">Выйти</string>
    <string name="request_credit">Запрос кредита</string>
    <string name="input_name">Введите имя</string>
    <string name="input_password">Введите пароль</string>
    <string name="amount_text">Сумма займа: </string>
    <string name="percent_text">Процентная ставка: </string>
    <string name="period_text">Период кредитования: </string>
    <string name="back_text">Назад</string>
    <string name="get_credit">Запросить кредит</string>
    <string name="send_data">Отправить запрос</string>
    <string name="first_name_text">Имя: </string>
    <string name="last_name_text">Фамилия: </string>
    <string name="phone_number_text">Номер телефона: </string>
    <string name="period_credit">Период кредита: </string>
    <string name="percent_credit">Процентная ставка: </string>
    <string name="amount_credit">Сумма: </string>
    <string name="final_message">Поздравляем !</string>
    <string name="info_message">Информация по кредиту:  </string>
    <string name="back_to_home">Вернуться в главное меню</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="MainActivity">Hello blank fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
