<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rectangle_rounded"
    tools:context=".view.RegistrationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="38dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_owl_icon" />

        <TextView
            android:id="@+id/registrationLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginHorizontal="20dp"
            android:text="@string/app_name"
            android:textColor="@color/light_text"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/registrationUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginHorizontal="20dp"
            android:gravity="center"
            android:text="@string/registration_text"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/light_text"/>

        <EditText
            android:id="@+id/registrationName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/login"
            android:inputType="textPersonName"
            android:textColor="@color/light_text"
            android:textColorHint="#A7AEC4"
            app:backgroundTint="#A7AEC4" />

        <EditText
            android:id="@+id/registrationPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/login_password"
            android:textStyle="bold"
            android:inputType="textPersonName"
            android:textColor="@color/light_text"
            android:textColorHint="#A7AEC4"
            app:backgroundTint="#A7AEC4" />

        <Button
            android:id="@+id/registrationBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70sp"
            android:layout_marginRight="70sp"
            android:layout_marginTop="20sp"
            android:background="@drawable/button_rounded"
            android:textColor="@color/light_button"
            android:enabled="false"
            android:text="@string/registration_button" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>