<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rectangle_rounded"
        tools:context=".view.HomeFragment">

    <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <TextView
                android:id="@+id/approvedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"

                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:text="@string/approved_loans" />

        <TextView
                android:id="@+id/registeredButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"

                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:text="@string/registered_loans" />

        <TextView
                android:id="@+id/rejectedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"

                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:text="@string/rejected_loans" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>