<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/light_button"
    tools:context=".view.LoanInfoFragment">


    <TextView
        android:id="@+id/textMaxAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="150dp"
        android:text="@string/amount_text"
        android:textColor="@color/light_text"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:text="@string/percent_text"
        android:textColor="@color/light_text"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textMaxAmount" />


    <TextView
        android:id="@+id/textPeriod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:text="@string/period_text"
        android:textColor="@color/light_text"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPercent" />

    <Button
        android:id="@+id/submitToReview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70sp"
        android:layout_marginRight="70sp"
        android:layout_marginTop="84dp"
        android:background="@drawable/button_rounded"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/get_credit"
        android:textColor="@color/light_button"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPeriod" />

    <TextView
        android:id="@+id/maxAmount"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="150dp"
        android:layout_marginStart="55dp"
        android:textColor="@color/light_text"
        android:textSize="20sp"
        android:visibility="visible"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textMaxAmount"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/loanPercent"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textColor="@color/light_text"
        android:textSize="20sp"
        android:layout_marginEnd="10dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textPercent"
        app:layout_constraintTop_toBottomOf="@+id/maxAmount" />

    <TextView
        android:id="@+id/loanPeriod"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:textColor="@color/light_text"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintStart_toEndOf="@+id/textPeriod"
        app:layout_constraintTop_toBottomOf="@+id/loanPercent" />

</androidx.constraintlayout.widget.ConstraintLayout>